# Planetary-system

./: CMakeLists.txt  main.cpp
src/: asteroid.cpp  asteroid.h  orbit.cpp  orbit.h  planet.cpp  planet.h  satellite.cpp  satellite.h  space.cpp  space.h  spaceBody.cpp  spaceBody.h
